[gd_scene load_steps=39 format=3 uid="uid://d3a1p4mffduua"]

[ext_resource type="Script" path="res://Scripts/Enemies/NormalEnemyStats.gd" id="1_5k22i"]
[ext_resource type="AudioStream" uid="uid://c71jkj6qpoi7y" path="res://Audio/male_hurt7-48124.mp3" id="2_8rwv4"]
[ext_resource type="Script" path="res://Scripts/enemyaim.gd" id="3_6u635"]
[ext_resource type="Script" path="res://Scripts/Enemies/NormalEnemyBullet.gd" id="4_1bsol"]
[ext_resource type="AudioStream" uid="uid://c7p4o1cmllkvy" path="res://Audio/9mm-pistol-shot-6349.mp3" id="5_70rnl"]
[ext_resource type="Script" path="res://Scripts/VisionLine.gd" id="6_pswjy"]
[ext_resource type="Texture2D" uid="uid://spo00g3wpoxp" path="res://Assets/Effects/HoverParticles.png" id="7_inrjw"]
[ext_resource type="AudioStream" uid="uid://cwynqdypgmpoc" path="res://Audio/sword-clash-241729.mp3" id="7_wnlg2"]
[ext_resource type="Texture2D" uid="uid://bos1yruppufut" path="res://Assets/Enemies/bandit2pistol.png" id="8_ocwkc"]
[ext_resource type="AudioStream" uid="uid://cx8hgyhxyqju6" path="res://Audio/cut.mp3" id="9_kylhy"]
[ext_resource type="AudioStream" uid="uid://chcxpvaououh5" path="res://Audio/punch.mp3" id="10_pco8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y21y5"]
size = Vector2(715.969, 375.125)

[sub_resource type="CircleShape2D" id="CircleShape2D_t860l"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p83or"]
radius = 4.44943

[sub_resource type="AtlasTexture" id="AtlasTexture_ersph"]
atlas = ExtResource("7_inrjw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6awy"]
atlas = ExtResource("7_inrjw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txdcs"]
atlas = ExtResource("7_inrjw")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhq5"]
atlas = ExtResource("7_inrjw")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_joorh"]
atlas = ExtResource("7_inrjw")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvbuk"]
atlas = ExtResource("8_ocwkc")
region = Rect2(79, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_78d33"]
atlas = ExtResource("8_ocwkc")
region = Rect2(79, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3cwc"]
atlas = ExtResource("8_ocwkc")
region = Rect2(158, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4jut"]
atlas = ExtResource("8_ocwkc")
region = Rect2(237, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xj31"]
atlas = ExtResource("8_ocwkc")
region = Rect2(0, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxg50"]
atlas = ExtResource("8_ocwkc")
region = Rect2(79, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_0853d"]
atlas = ExtResource("8_ocwkc")
region = Rect2(158, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_h54is"]
atlas = ExtResource("8_ocwkc")
region = Rect2(237, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3423"]
atlas = ExtResource("8_ocwkc")
region = Rect2(0, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tp10"]
atlas = ExtResource("8_ocwkc")
region = Rect2(79, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ovm"]
atlas = ExtResource("8_ocwkc")
region = Rect2(158, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_qir65"]
atlas = ExtResource("8_ocwkc")
region = Rect2(0, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_17jom"]
atlas = ExtResource("8_ocwkc")
region = Rect2(79, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvmus"]
atlas = ExtResource("8_ocwkc")
region = Rect2(158, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_eukyk"]
atlas = ExtResource("8_ocwkc")
region = Rect2(237, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_nksuf"]
atlas = ExtResource("8_ocwkc")
region = Rect2(0, 79, 79, 79)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxa6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ersph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6awy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txdcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joorh")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvbuk")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [],
"loop": true,
"name": &"meleeing",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78d33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3cwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4jut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xj31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxg50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0853d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h54is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3423")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tp10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ovm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qir65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17jom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvmus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eukyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksuf")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rly2m"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxf4s"]
size = Vector2(9, 63)

[node name="Bandit2Pistol" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 33
collision_mask = 35
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_5k22i")
hp = 80
twoweapons = true

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8rwv4")
volume_db = -2.721
pitch_scale = 0.96

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("RectangleShape2D_y21y5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t860l")

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 4.71239
script = ExtResource("3_6u635")

[node name="EnemyBullet" type="Area2D" parent="RayCast2D"]
position = Vector2(0, -1)
script = ExtResource("4_1bsol")

[node name="Gunshot" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
rotation = 1.5708
stream = ExtResource("5_70rnl")
volume_db = -13.261
pitch_scale = 1.67

[node name="Hit" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
stream = ExtResource("2_8rwv4")
volume_db = 0.627
pitch_scale = 0.8

[node name="VisionLine" type="RayCast2D" parent="RayCast2D/EnemyBullet"]
target_position = Vector2(164, -0.000158358)
script = ExtResource("6_pswjy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.00593, 1.00182)
shape = SubResource("CircleShape2D_p83or")

[node name="Firerate" type="Timer" parent="RayCast2D/EnemyBullet"]
wait_time = 0.9

[node name="ColorRect" type="ColorRect" parent="RayCast2D/EnemyBullet"]
offset_left = 10.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 6.0
color = Color(1, 1, 0, 1)

[node name="Deflect" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
stream = ExtResource("7_wnlg2")
pitch_scale = 1.38

[node name="EnemyBullet2" type="Area2D" parent="RayCast2D"]
position = Vector2(0, -12)
script = ExtResource("4_1bsol")

[node name="Gunshot" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet2"]
rotation = 1.5708
stream = ExtResource("5_70rnl")
volume_db = -13.261
pitch_scale = 1.67

[node name="Hit" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet2"]
stream = ExtResource("2_8rwv4")
volume_db = 0.627
pitch_scale = 0.8

[node name="VisionLine" type="RayCast2D" parent="RayCast2D/EnemyBullet2"]
position = Vector2(0, 10)
target_position = Vector2(164, -0.000158358)
script = ExtResource("6_pswjy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/EnemyBullet2"]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.00593, 1.00182)
shape = SubResource("CircleShape2D_p83or")

[node name="Firerate" type="Timer" parent="RayCast2D/EnemyBullet2"]
wait_time = 1.6

[node name="ColorRect" type="ColorRect" parent="RayCast2D/EnemyBullet2"]
offset_left = 10.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 6.0
color = Color(1, 1, 0, 1)

[node name="Deflect" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet2"]
stream = ExtResource("7_wnlg2")
pitch_scale = 1.38

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RayCast2D"]
texture_filter = 1
position = Vector2(5, -1)
rotation = 1.5708
scale = Vector2(0.627918, 0.682036)
sprite_frames = SubResource("SpriteFrames_pxa6k")
animation = &"run"

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_rly2m")

[node name="Cut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kylhy")
volume_db = -5.754

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pco8x")
volume_db = 4.0
pitch_scale = 1.5

[node name="EnemyMelee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyMelee"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_cxf4s")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="EnemyMelee"]
stream = ExtResource("9_kylhy")

[connection signal="dead2" from="." to="RayCast2D" method="_on_criminal_dead_2"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="RayCast2D/EnemyBullet" to="RayCast2D/EnemyBullet" method="_on_body_entered"]
[connection signal="novision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_novision"]
[connection signal="vision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_vision"]
[connection signal="timeout" from="RayCast2D/EnemyBullet/Firerate" to="RayCast2D/EnemyBullet" method="_on_firerate_timeout"]
[connection signal="body_entered" from="RayCast2D/EnemyBullet2" to="RayCast2D/EnemyBullet2" method="_on_body_entered"]
[connection signal="novision" from="RayCast2D/EnemyBullet2/VisionLine" to="RayCast2D/EnemyBullet2" method="_on_vision_line_novision"]
[connection signal="vision" from="RayCast2D/EnemyBullet2/VisionLine" to="RayCast2D/EnemyBullet2" method="_on_vision_line_vision"]
[connection signal="timeout" from="RayCast2D/EnemyBullet2/Firerate" to="RayCast2D/EnemyBullet2" method="_on_firerate_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="EnemyMelee" to="." method="_on_enemy_melee_body_entered"]
